// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountImagesViewListItem Component should render a component 1`] = `
<div
  class="list-group-item cloudmeter-accountview-list-view-item"
>
  <div
    class="list-group-item-header"
  >
    <div
      class="list-view-pf-expand"
    >
      <span
        class="fa fa-angle-right"
      />
    </div>
    <div
      class="list-view-pf-main-info"
    >
      <div
        class="list-view-pf-left"
      >
        <span
          aria-hidden="true"
          class="fa fa-unknown list-view-pf-icon-sm"
        />
      </div>
      <div
        class="list-view-pf-body"
      >
        <div
          class="list-view-pf-description"
        >
          <div
            class="list-group-item-heading"
          >
            <span
              class="cloudmeter-list-view-item-heading"
            >
              <strong
                class="cloudmeter-list-view-item-heading-title"
              >
                ami-rhel7
              </strong>
            </span>
          </div>
        </div>
        <div
          class="list-view-pf-additional-info"
        >
          <div
            class="list-view-pf-additional-info-item cloudmeter-listview-infoitem"
          >
            <span>
              <span
                aria-hidden="true"
                class="pficon pficon-screen"
              />
              <strong>
                2
              </strong>
               Instances
            </span>
          </div>
          <div
            class="list-view-pf-additional-info-item cloudmeter-listview-label cloudmeter-listview-label-has-badge"
          >
            <span>
              <span
                aria-hidden="true"
                class="fa fa-clock-o"
              />
              <strong>
                25
              </strong>
            </span>
            <span>
              <span
                class="label label-warning"
              >
                <abbr
                  title="Red Hat Enterprise Linux"
                >
                  RHEL
                </abbr>
              </span>
               
            </span>
          </div>
          <div
            class="list-view-pf-additional-info-item cloudmeter-listview-label cloudmeter-listview-label-has-badge"
          >
            <span
              aria-hidden="true"
              class="fa fa-clock-o"
            />
            <strong>
              N/A
            </strong>
            <span>
              <span
                class="label label-primary"
              >
                <abbr
                  title="Red Hat OpenShift Container Platform"
                >
                  RHOCP
                </abbr>
              </span>
               
              <span
                aria-hidden="true"
                class="fa fa-flag cloudmeter-pficon-error"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="list-group-item-container container-fluid hidden"
  >
    <div
      class="close"
    >
      <span
        class="pficon pficon-close"
      />
    </div>
  </div>
</div>
`;

exports[`AccountImagesViewListItem Component should wrap long names with a on hover title 1`] = `
<div
  class="list-group-item cloudmeter-accountview-list-view-item"
>
  <div
    class="list-group-item-header"
  >
    <div
      class="list-view-pf-expand"
    >
      <span
        class="fa fa-angle-right"
      />
    </div>
    <div
      class="list-view-pf-main-info"
    >
      <div
        class="list-view-pf-left"
      >
        <span
          aria-hidden="true"
          class="fa fa-unknown list-view-pf-icon-sm"
        />
      </div>
      <div
        class="list-view-pf-body"
      >
        <div
          class="list-view-pf-description"
        >
          <div
            class="list-group-item-heading"
          >
            <span
              class="cloudmeter-list-view-item-heading"
            >
              <strong
                class="cloudmeter-list-view-item-heading-title"
              >
                <span
                  title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed sodales eros."
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed sodales eros.
                </span>
              </strong>
            </span>
          </div>
        </div>
        <div
          class="list-view-pf-additional-info"
        >
          <div
            class="list-view-pf-additional-info-item cloudmeter-listview-infoitem"
          >
            <span>
              <span
                aria-hidden="true"
                class="pficon pficon-screen"
              />
              <strong>
                2
              </strong>
               Instances
            </span>
          </div>
          <div
            class="list-view-pf-additional-info-item cloudmeter-listview-label cloudmeter-listview-label-has-badge"
          >
            <span>
              <span
                aria-hidden="true"
                class="fa fa-clock-o"
              />
              <strong>
                25
              </strong>
            </span>
            <span>
              <span
                class="label label-warning"
              >
                <abbr
                  title="Red Hat Enterprise Linux"
                >
                  RHEL
                </abbr>
              </span>
               
            </span>
          </div>
          <div
            class="list-view-pf-additional-info-item cloudmeter-listview-label cloudmeter-listview-label-has-badge"
          >
            <span
              aria-hidden="true"
              class="fa fa-clock-o"
            />
            <strong>
              N/A
            </strong>
            <span>
              <span
                class="label label-primary"
              >
                <abbr
                  title="Red Hat OpenShift Container Platform"
                >
                  RHOCP
                </abbr>
              </span>
               
              <span
                aria-hidden="true"
                class="fa fa-flag cloudmeter-pficon-error"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="list-group-item-container container-fluid hidden"
  >
    <div
      class="close"
    >
      <span
        class="pficon pficon-close"
      />
    </div>
  </div>
</div>
`;
